; ModuleID = '/home/carl/AnghaBench/openssl/crypto/dso/extr_dso_lib.c_DSO_pathbyaddr.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/dso/extr_dso_lib.c_DSO_pathbyaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i8*, i8*, i32)* }

@default_DSO_meth = common dso_local global %struct.TYPE_4__* null, align 8
@DSO_F_DSO_PATHBYADDR = common dso_local global i32 0, align 4
@DSO_R_UNSUPPORTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DSO_pathbyaddr(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @default_DSO_meth, align 8
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %8, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %11 = icmp eq %struct.TYPE_4__* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = call %struct.TYPE_4__* (...) @DSO_METHOD_openssl()
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %8, align 8
  br label %14

14:                                               ; preds = %12, %3
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32 (i8*, i8*, i32)*, i32 (i8*, i8*, i32)** %16, align 8
  %18 = icmp eq i32 (i8*, i8*, i32)* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i32, i32* @DSO_F_DSO_PATHBYADDR, align 4
  %21 = load i32, i32* @DSO_R_UNSUPPORTED, align 4
  %22 = call i32 @DSOerr(i32 %20, i32 %21)
  store i32 -1, i32* %4, align 4
  br label %31

23:                                               ; preds = %14
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32 (i8*, i8*, i32)*, i32 (i8*, i8*, i32)** %25, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i32 %26(i8* %27, i8* %28, i32 %29)
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %23, %19
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local %struct.TYPE_4__* @DSO_METHOD_openssl(...) #1

declare dso_local i32 @DSOerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
